# python-project-template

./: .env.example  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  bootstrap.py  docker-compose.yml  pyproject.toml
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: ci.yml  release-drafter.yml
docker/: Dockerfile.prod
docs/architecture/: generate_diagram.py
github/: pull_request_template.md
scripts/: bootstrap.py
src/project_name/: __init__.py  config.py
src/project_name/utils/: logging.py
tests/: conftest.py
tests/unit/: test_config.py
