[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-name"
version = "0.1.0"
description = "Short description of your project"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# ── Runtime dependencies ──────────────────────────────────────────────────────
dependencies = [
    # Add your runtime deps here, e.g.:
    # "numpy>=1.26",
    # "pandas>=2.1",
    # "scikit-learn>=1.4",
    # "pydantic>=2.0",
]

# ── Optional dependency groups ────────────────────────────────────────────────
[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.9",
    "pre-commit>=3.7",
]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",   # parallel test execution
    "pytest-mock>=3.12",
]
notebooks = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "diagrams>=0.23",       # architecture diagrams as code
]

# ── Ruff: linter + formatter (replaces flake8, black, isort) ─────────────────
[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "D",   # pydocstyle
]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D203",  # 1 blank line required before class docstring (conflicts with D211)
    "D213",  # Multi-line docstring summary should start at the second line (conflicts with D212)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]          # no docstring rules in tests
"notebooks/**" = ["E402"]   # allow imports not at top in notebooks

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Mypy: static type checking ────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["notebooks/", "docs/"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "notebooks/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
fail_under = 80
