[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-name"
version = "0.1.0"
description = "Short description of your project"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# ── Runtime dependencies ──────────────────────────────────────────────────────
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    # Add your runtime deps here, e.g.:
    # "numpy>=1.26",
    # "pandas>=2.1",
    # "scikit-learn>=1.4",
    # "opencv-python",
    # "torch",
    # "torchvision",
    # "transformers",
    # "Pillow",
    # "mlflow"
]

# ── Hatch build config ────────────────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["src/project_name"]

# ── Optional dependency groups ────────────────────────────────────────────────
[project.optional-dependencies]
dev = [
    "ruff>=0.15.10",
    "mypy>=1.9",
    "pre-commit>=3.7",
    "pydantic[mypy]>=2.0",
]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "pytest-mock>=3.12",
]
notebooks = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "diagrams>=0.23",
]

# ── Ruff: linter + formatter ──────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP", "N", "D",
]
ignore = [
    "D100", "D104", "D203", "D213",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
"notebooks/**" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["notebooks/", "docs/"]
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "notebooks/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
fail_under = 80